--- a/debian/config
+++ b/debian/config
@@ -6,12 +6,12 @@ set -e
 
 db_version 2.0
 
-db_input low huayra-grub-themes/set_theme || true
+db_input medium huayra-grub-themes/set_theme || true
 db_go
 
 db_get huayra-grub-themes/set_theme
 
 if [ "$RET" = "true" ]; then
-  db_input low huayra-grub-themes/theme || true
+  db_input medium huayra-grub-themes/theme || true
   db_go
 fi
