--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: graphics
 Priority: extra
 Maintainer: Fernando Toledo <ragnarok@docksud.com.ar>
 Build-Depends: debhelper (>= 8.0.0)
-Standards-Version: 3.9.3
+Standards-Version: 3.9.5
 Homepage: http://huayra.conectarigualdad.gob.ar
 
 Package: huayra-grub-themes
 Architecture: all
-Depends: ${misc:Depends}, debianutils (>= 4.3.2)
+Depends: ${misc:Depends}, debianutils (>= 4.3.2), grub-pc
 Description: Temas para grub de Huayra
  Colección de temas para grub de Huayra GNU/Linux
 
