--- a/debian/control
+++ b/debian/control
@@ -14,13 +14,15 @@ Description: Temas para grub de Huayra
 
 Package: huayra-grub-themes-limbo
 Architecture: all
-Depends: ${misc:Depends}, debianutils (>= 4.3.2), grub-pc | grub-efi
+Depends: ${misc:Depends}, debianutils (>= 4.3.2), grub-pc | grub-efi,
+    huayra-grub-themes
 Description: Temas para grub de Huayra
  Colección de temas para grub de Huayra GNU/Linux
 
 Package: huayra-grub-themes-liso
 Architecture: all
-Depends: ${misc:Depends}, debianutils (>= 4.3.2), grub-pc | grub-efi
+Depends: ${misc:Depends}, debianutils (>= 4.3.2), grub-pc | grub-efi,
+    huayra-grub-themes
 Description: Temas para grub de Huayra
  Colección de temas para grub de Huayra GNU/Linux
 
