Actualizando version y changelog

--- a/debian/control
+++ b/debian/control
@@ -28,6 +28,14 @@ Description: Tema Liso 3.0 para grub de Huayra
  En este paquete se encuentra la version Liso 3.0 de
  los temas desarrollados en Huayra para GRUB.
 
+Package: huayra-grub-themes-liso-3.3
+Architecture: all
+Depends: ${misc:Depends}, debianutils (>= 4.3.2),
+    huayra-grub-themes
+Description: Tema Liso 3.3 para grub de Huayra
+ En este paquete se encuentra la version Liso 3.3 de
+ los temas desarrollados en Huayra para GRUB.
+
 Package: huayra-grub-themes-liso
 Architecture: all
 Depends: ${misc:Depends}, debianutils (>= 4.3.2),
