Debian: archivos de huayra 4.0

--- a/debian/control
+++ b/debian/control
@@ -51,3 +51,11 @@ Depends: ${misc:Depends}, debianutils (>= 4.3.2),
 Description: Tema Ocho para grub de Huayra
  En este paquete se encuentra la version Ocho de
  los temas desarrollados en Huayra para GRUB.
+
+Package: huayra-grub-themes-huayra-4.0
+Architecture: all
+Depends: ${misc:Depends}, debianutils (>= 4.3.2),
+    huayra-grub-themes
+Description: Tema Huayra 4.0 para grub de Huayra
+ En este paquete se encuentra la version Huayra 4.0 de
+ los temas desarrollados en Huayra para GRUB.
