agregando paquete para theme Juana Manso

--- a/debian/control
+++ b/debian/control
@@ -59,3 +59,12 @@ Depends: ${misc:Depends}, debianutils (>= 4.3.2),
 Description: Tema Huayra 4.0 para grub de Huayra
  En este paquete se encuentra la version Huayra 4.0 de
  los temas desarrollados en Huayra para GRUB.
+
+Package: huayra-grub-themes-huayra-jm
+Architecture: all
+Depends: ${misc:Depends}, debianutils (>= 4.3.2),
+    huayra-grub-themes
+Description: Tema Juana Manso para grub de Huayra
+ En este paquete se encuentra la version Juana Manso de
+ los temas desarrollados en Huayra para GRUB.
+
